Add abstract for keynote 2013

--- a/exampleSite/content/pages/keynotes_timeline.html
+++ b/exampleSite/content/pages/keynotes_timeline.html
@@ -370,6 +370,7 @@ theme: "damon-light"
           <h3>2013</h3>
           <details>
             <summary style="list-style: none; color: #334d7d;">Netezza Performance Architecture</summary>
+            In this talk I will explore hardware and software co-design as a strategy for developing novel, high value data management products on new hardware through the lens of the early history of Netezza Corporation. In a little over ten years, Netezza went from a standing start to a successful public offering and then a $1.7B acquisition by IBM. By combining field programmable gate arrays, loosely coupled multi-processing based on low power CPUs and data structures specialized for analytical query processing with low demand for administration and database tuning on the part of the user, Netezza successfully disrupted the market for data warehousing solutions. The key to this success was a novel combination of hardware and software that yielded market leading price-performance and market leading ease-of-use. Both of these characteristics were directly tied to key technical decisions that re-imagined both database management software and hardware, a process referred to here as 'deep codesign'.
           </details>
           <details>
             <summary style="list-style: none; color: #e1ba7b;">Daniel J. "Dan" Feldman (Netezza)</summary>
